pre-0.20.x:
This change scheduled for 0.20.1 has failed in sim_tests. Need to be checked again why
- RampGenerator uses now the delayed start feature of the queue

pre-0.20.3:
- StepperDemo extended with test sequence 10 for issue #44
- avr: Avoid ClearInterruptFlag() in ISR, which is needed by simavr due to implementation bug

0.20.2:
- Fix for issue #45: if enablePinHighActive has been set to PIN_UNDEFINED,
  the externalEnableCall was cleared even if enablePinLowActive still in use.
- Bugfix for issue #46: Avoid creation of invalid command in ramp generator while decelerating

0.20.1:
- few minor speed ups
- StepperDemo extended:
	- avr only: command 'r' toggles erroneous digitalRead() to stepperpin
	- command 'e' toggles interrupt block of ~100us

0.20.0:
- rename setSpeed to setSpeedInUs
- add setSpeedInHz() and setSpeedInMilliHz()
- RampGenerator code reworked and simplified

0.19.0:
- avoid overflow in setSpeed for super slow speed
- setSpeed and setAcceleration return status code
- moveByAcceleration(): check if direction pin is defined for reverse
- add getter functions: getSpeedInUS(), getAcceleration()
- StepperDemo extended:
	- move/moveTo/moveByAcceleration => verbose error code
	- setSpeed/setAcceleration =>x report invalid data error
	- motor info with speed/acceleration
	- less verbose: if any motor is running, only info for running motor
- fix issue #43: Issue on moveTo() to exactly same target after a completion of stopMove()


0.18.13:
- Add fix for issue #41: High acceleration and high speed

0.18.12:
- Issue #40 fixed:
	- moveTo() has started ramp generator, even if on target position
	- avoid recalculation of ramp on setAcceleration, if unchanged value

0.18.11:
- Remove obsolete queue_end variables ticks and ticks_from_last_step
- Fix for issue #33: pulse counter needed to be cleared at motor start

0.18.10:
- Reapply modified fix, which was reverted in 0.18.9

0.18.9:
- Fixed esp32 high speed step loss: partial reverted this fix for now
