@@ -26,6 +26,6 @@ build_flags = -D SIM_TEST_INPUT='"? M2 A1000 V100 R3200 W t W "'
 platform    = atmelavr
 board       = megaatmega2560
 framework   = arduino
-build_flags = -Werror -Wall -DSIMAVR_FOC_WORKAROUND ${common.build_flags}
+build_flags = -Werror -Wall ${common.build_flags}
 lib_extra_dirs = ../../..
 
