@@ -20,7 +20,7 @@
 #
 [common]
 # This is the line input to StepperDemo:
-build_flags = -D SIM_TEST_INPUT='"M1 A100000 V40 R1000 M2 A100000 V40 R1000 W M1 W t W "' -D SIMAVR_TIME_MEASUREMENT -DSIMAVR_FOC_WORKAROUND
+build_flags = -D SIM_TEST_INPUT='"M1 A100000 V40 R1000 M2 A100000 V40 R1000 W M1 W t W "' -D SIMAVR_TIME_MEASUREMENT
 
 [env:atmega328p]
 platform    = atmelavr
