@@ -26,6 +26,6 @@ build_flags = -D SIM_TEST_INPUT='"? M1 V60 A40000 f w400 A40000 P0 w1000 W"'
 platform    = atmelavr
 board       = nanoatmega328
 framework   = arduino
-build_flags = -Werror -Wall -DSIMAVR_FOC_WORKAROUND ${common.build_flags}
+build_flags = -Werror -Wall ${common.build_flags}
 lib_extra_dirs = ../../..
 
