@@ -26,6 +26,6 @@ build_flags = -D SIM_TEST_INPUT='"M1 V40 A1000000 R1 w300 ? W"'
 platform    = atmelavr
 board       = nanoatmega328
 framework   = arduino
-build_flags = -Werror -Wall -DSIMAVR_FOC_WORKAROUND ${common.build_flags}
+build_flags = -Werror -Wall ${common.build_flags}
 lib_extra_dirs = ../../..
 
